--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     overflow: hidden;
     display: flex;
     background: url('aff.jpg')no-repeat center center fixed;
+    background-size: cover;
+    background-position: center;
     justify-content: center;
     align-items: center;
     height: 100vh;
